# internal/transport/http/router.go
@@ -10,7 +10,6 @@ import (
 	routeRepostory "aulway/internal/repository/route"
 	userRepository "aulway/internal/repository/user"
 	"aulway/internal/service"
-	middleware "aulway/internal/transport/middlware"
 	"aulway/internal/utils/config"
 	fbAuth "firebase.google.com/go/auth"
 	"github.com/labstack/echo/v4"
@@ -68,33 +67,46 @@ func (r *Router) Build() *echo.Echo {
 	e.POST("/signin", auth.FirebaseSignIn(userService, r.fb))
 
 	// ------- user APIs
+	//
+	//publicProtected := e.Group("/api", middleware.FirebaseAuthMiddleware(r.fb))
+	//
+	//publicProtected.PUT("/users/:userId", user.UpdateUserHandler(userService))
+	//publicProtected.GET("/users/:userId", user.GetUserByIdHandler(userService))
+	//
+	//publicProtected.GET("/buses/:busId", bus.GetBusHandler(busService, r.c))
+	//
+	//publicProtected.GET("/routes/:routeId", route.GetRouteHandler(routeService, r.c))
+	//publicProtected.GET("/routes", route.GetRoutesListHandler(routeService, r.c))
+	//
+	//// ----- admin APIs
+	//
+	//adminProtected := e.Group("/admin", middleware.AccessCheckMiddleware(AdminRole))
+	//
+	//adminProtected.PUT("/users/:userId", user.UpdateUserHandler(userService))
+	//adminProtected.GET("/users/userId", user.GetUserByIdHandler(userService))
+	//adminProtected.GET("/users", user.GetUsersList(userService))
+	//
+	//adminProtected.POST("/buses", bus.CreateBusHandler(busService, r.c))
+	//adminProtected.GET("/buses/:busId", bus.GetBusHandler(busService, r.c))
+	//
+	//adminProtected.POST("/routes", route.CreateRouteHandler(routeService, busService, r.c))
+	//adminProtected.GET("/routes/:routeId", route.GetRouteHandler(routeService, r.c))
+	//adminProtected.PUT("/routes/:routeId", route.UpdateRouteHandler(routeService, r.c))
+	//adminProtected.DELETE("/routes/:routeId", route.DeleteRouteHandler(routeService, r.c))
+	//adminProtected.GET("/routes", route.GetRoutesListHandler(routeService, r.c))
 
-	publicProtected := e.Group("/api", middleware.FirebaseAuthMiddleware(r.fb))
+	e.PUT("/users/:userId", user.UpdateUserHandler(userService))
+	e.GET("/users/userId", user.GetUserByIdHandler(userService))
+	e.GET("/users", user.GetUsersList(userService))
 
-	publicProtected.PUT("/users/:userId", user.UpdateUserHandler(userService))
-	publicProtected.GET("/users/:userId", user.GetUserByIdHandler(userService))
+	e.POST("/buses", bus.CreateBusHandler(busService, r.c))
+	e.GET("/buses/:busId", bus.GetBusHandler(busService, r.c))
 
-	publicProtected.GET("/buses/:busId", bus.GetBusHandler(busService, r.c))
-
-	publicProtected.GET("/routes/:routeId", route.GetRouteHandler(routeService, r.c))
-	publicProtected.GET("/routes", route.GetRoutesListHandler(routeService, r.c))
-
-	// ----- admin APIs
-
-	adminProtected := e.Group("/admin", middleware.AccessCheckMiddleware(AdminRole))
-
-	adminProtected.PUT("/users/:userId", user.UpdateUserHandler(userService))
-	adminProtected.GET("/users/userId", user.GetUserByIdHandler(userService))
-	adminProtected.GET("/users", user.GetUsersList(userService))
-
-	adminProtected.POST("/buses", bus.CreateBusHandler(busService, r.c))
-	adminProtected.GET("/buses/:busId", bus.GetBusHandler(busService, r.c))
-
-	adminProtected.POST("/routes", route.CreateRouteHandler(routeService, busService, r.c))
-	adminProtected.GET("/routes/:routeId", route.GetRouteHandler(routeService, r.c))
-	adminProtected.PUT("/routes/:routeId", route.UpdateRouteHandler(routeService, r.c))
-	adminProtected.DELETE("/routes/:routeId", route.DeleteRouteHandler(routeService, r.c))
-	adminProtected.GET("/routes", route.GetRoutesListHandler(routeService, r.c))
+	e.POST("/routes", route.CreateRouteHandler(routeService, busService, r.c))
+	e.GET("/routes/:routeId", route.GetRouteHandler(routeService, r.c))
+	e.PUT("/routes/:routeId", route.UpdateRouteHandler(routeService, r.c))
+	e.DELETE("/routes/:routeId", route.DeleteRouteHandler(routeService, r.c))
+	e.GET("/routes", route.GetRoutesListHandler(routeService, r.c))
 
 	return e
 }
